fix dropdown overlap issue

--- a/static/css/reviews.css
+++ b/static/css/reviews.css
@@ -10,9 +10,6 @@
     }
 }
 
-#table-div {
-    overflow-x: auto;
-}
 input[type=search]:focus {
     outline: none;
     border-color: #84B8BA;
